# sitcon-camp-2025

./: LICENSE  README.md  backend.env.example  docker-compose.yml  run_backend.sh  run_frontend.sh
.github/instructions/: restrictions.instructions.md
backend/: .dockerignore  .env.example  .gitignore  AUTH_API.md  Dockerfile  README.md  main.py  pyproject.toml  start_dev.py
backend/prompts/: siri.md
backend/src/: __init__.py  auth.py  database.py  file_utils.py  genai_utils.py  main.py  models.py  prompt_manager.py  schemas.py
backend/src/ai/: __init__.py  chat.py  client.py
backend/src/ai/handlers/: __init__.py  contact.py  record.py  unified.py
backend/src/ai/tools/: __init__.py  contact.py  record.py
backend/src/routers/: __init__.py  auth.py  chat.py  contact.py  record.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json
frontend/rules/: frontend.mdc  mantine.mdc  naming-conventions.mdc  next-js-best-practices.mdc
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: auth-guard.tsx  chat.tsx  contact.tsx  genie.tsx  global-auth-wrapper.tsx  motion-wrapper.tsx  navbar.tsx  providers.tsx  sidebar.tsx  siri.tsx
frontend/src/components/chat/: chat-input.tsx  index.tsx  (+6 more)
frontend/src/hooks/: use-is-mobile.ts  use-toast.ts
frontend/src/lib/: animations.ts  image-utils.ts
frontend/src/types/: ambient.d.ts  react.d.ts
(+33 files in other folders)
