[project]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.0",
  "pyjwt>=2.8.0",
  "bcrypt>=4.0.0",
  "python-multipart>=0.0.6",
  "pydantic>=2.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.0.0",
  "requests>=2.31.0",
]
description = "Add your description here"
name = "backend"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
